For someone special...

--- a/index.html
+++ b/index.html
@@ -20,27 +20,23 @@
 </head>
     <body>
         <audio autoplay=true>
-            <source src="Johnny_Drille-Romeo_&_Juliet.mp3" />
-          </audio> 
+            <source src="Conservation_in_the_dark.mp3" />
+        </audio> 
         <div id="main">
             <div id="error">Trình duyệt của bạn không được hỗ trợ.</div>
                 <div id="wrap">
                     <div id="text">
                         <div id="code">
-                            <font color="#0000FF"><span class="say">Hello !</span><br>
-                                <span class="say"> </span><br>
-                                <span class="say">If I could be honest with you, I am feeling nervous writing you these words. It can not be a secret anymore.</span><br>
-                                <span class="say">I hope I should have the time to say this in person but I do not have that now.</span><br>
-                                <span class="say">You are smart, beautiful and most of all very simple to be around. You have those smiles that are architecturally impossible. </span><br>
-                                <span class="say" style="color:pink;">I love you Afanwi. </span><br>
-                                <span class="say">Do not blame me because I like you, it is your fault to have everything that I love.</span><br>
-                                <span class="say">Your smiles make me smile. You moved me.</span><br>
-                                <span class="say">Your face is my imagination screensaver. </span><br>
-                                <span class="say" style="color:red;">Je t'aime Afanwi </span><br>
-                                <span class="say">So dear, “ WILL YOU BE MY LOVER? “</span><br>
-                                <span class="say"> </span><br>
-                                <span class="say"><span class="space"></span></span><br/>
-                                <span class="say" style="color:red;"><span class="space"></span>Augie J</span><br>
+                            <font color="#0000FF"><span class="say">Hello!</span><br>
+                                <span class="say">This is supposed to be a birthday message but it's not. I know we have talked about this but I want it to be different. 
+                                    I do have feelings for you Mariama. I have been having them since the first day I saw you.</span><br>
+                                <span class="say">At first, I fall in love with you because of your beauty, but now, I am in love with you more because of your mind.</span><br>
+                                <span class="say">You motivate me more than I could imagine. I feel safe whenever I am around you. You give me strength whenever I need one. Just tell me if you can't feel that too.</span><br>
+                                <span class="say">So I ask again, will you be that one girl that I want to think about every day in life? 
+                                    That one girl that completes me. That one girl which I hear her voice or watch her face gives me a reason to smile even if I don't want to. </span><br>
+                                <span class="say" style="color:red;">All I ever want is for us to be more than friends. Will you give me that?</span><br>                               
+                                <!-- <span class="say"><span class="space"></span></span><br/> -->
+                                <!-- <span class="say" style="color:red;"><span class="space"></span>Augie J</span><br> -->
                             </font></p>
                         </div>
                     </div>
